--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,82 @@
-body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+body{
+  background-color: rgb(46, 46, 46);
+}
+#navbarSupportedContent{
+  transition: 1.7s;
+}
+.section1{
+  background-color:rgb(0, 0, 0) ;
+  margin-top: 10%;
+}
+.card-deck{
+  margin: 10%;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+}
+.card{
+  margin: 3%;
+
+}
+#card2{
+  max-height: 87%;
+}
+#card3{
+  margin-top: -13%;
+}
+.section3{
+  margin-top: 10%;
+  background-color: black;
+  border-radius: 15px;
+}
+#carouselExampleCaptions img{
+  max-height: 300px;
+  object-fit: scale-down; 
+  border-radius: 5px;
+  padding: 1%;
+  border-radius: 10px;
+}
+.section4{
+  margin-top: 10%;
+  margin-bottom: 10%;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  background-color: rgb(0, 0, 0);
+}
+.section4 p{
+  color: white;
+}
+h5 {
+  color: white;
+}
+footer{
+  height: 100%;
+  background-color: rgb(39,39,50);
+  float: bottom;
+}
+h6{
+ color: black;
+ padding: 2%;
+}
+.col a{
+  padding: 2%;
+  color: black;
 }
 
-a {
-  color: #00B7FF;
+@media screen and (max-width:768px){
+.card-deck{
+  grid-template-columns: repeat(2,1fr);
+  margin-top: 50%;
+  max-height: 60%;
+}
+.card{
+  margin: 5%;
+}
+.section4 iframe{
+  max-width: 300px;
+  max-height: 250px;
+  width: 75%;
+}
+.footer{
+  max-height:200px;
+}
 }
