--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,14 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="/public/stylesheets/style.css">
-</head>
-<body>
   <header>
     <nav class="navbar fixed-top navbar-dark shadow p-3 mb-1 bg-black rounded">
       <a class="navbar-brand" href="#">KOWLOON BAR</a>
@@ -18,35 +7,35 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="#">Inicio<span class="sr-only"></span></a>
+            <a class="nav-link" href="/">Inicio<span class="sr-only"></span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Menu</a>
+            <a class="nav-link" href="/menu">Menu</a>
           </li>
           <li class="nav-item dropdown" id="dropmenu">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               Agenda Cultural
             </a>
             <div class="dropdown-menu bg-black" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item" href="#">Conciertos y eventos</a>
+              <a class="dropdown-item" href="/agenda">Conciertos y eventos</a>
               <a class="dropdown-item" href="#">Grabaciones</a>
               <div class="dropdown-divider"></div>
               <a class="dropdown-item" href="#">¿Queres organizar algo con nosotros?</a>
             </div>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">Sobre Nosotros</a>
+            <a class="nav-link" href="/nosotros" tabindex="-1" aria-disabled="true">Sobre Nosotros</a>
           </li>
         </ul>
-        <form>
+        <form action="/" method="post">
           <div class="form-group">
             <label for="exampleInputEmail1">Email</label>
-            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" name="mail">
             <small id="emailHelp" class="form-text text-muted"></small>
           </div>
           <div class="form-group">
             <label for="exampleInputPassword1">Contraseña</label>
-            <input type="password" class="form-control" id="exampleInputPassword1">
+            <input type="password" class="form-control" id="exampleInputPassword1" name="password">
           </div>
           <div class="form-group form-check">
             <input type="checkbox" class="form-check-input" id="exampleCheck1">
@@ -56,61 +45,61 @@
         </form>
       </div>
     </nav>
-  </header> 
+  </header>
   <main>
    <div class="section1">
     <div class="card-deck rounded">
       <div class="card bg-black border-white mb-2">
-        <img src="img/fotomanu1.jpg" class="card-img-top" alt="...">
+        <img src="images/fotomanu1.jpg" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">Card title</h5>
           <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
         </div>
       </div>
       <div class="card bg-black border-white mb-2" id="card2">
-        <img src="img/fotomanu1.jpg" class="card-img-top" alt="...">
+        <img src="images/fotomanu1.jpg" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">Card title</h5>
           <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
         </div>
       </div>
       <div class="card bg-black border-white mb-2">
-        <img src="img/fotomanu1.jpg" class="card-img-top" alt="...">
+        <img src="images/fotomanu1.jpg" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">Card title</h5>
           <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
         </div>
       </div>
       <div class="card bg-black border-white mb-2" id="card2">
-        <img src="img/fotomanu1.jpg" class="card-img-top" alt="...">
+        <img src="images/fotomanu1.jpg" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">Card title</h5>
           <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
         </div>
       </div>
       <div class="card bg-black border-white mb-2">
-        <img src="img/fotomanu1.jpg" class="card-img-top" alt="...">
+        <img src="images/fotomanu1.jpg" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">Card title</h5>
           <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
         </div>
       </div>
       <div class="card bg-black border-white mb-2" id="card3">
-        <img src="img/fotomanu1.jpg" class="card-img-top" alt="...">
+        <img src="images/fotomanu1.jpg" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">Card title</h5>
           <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
         </div>
       </div>
       <div class="card bg-black border-white mb-2">
-        <img src="img/fotomanu1.jpg" class="card-img-top" alt="...">
+        <img src="images/fotomanu1.jpg" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">Card title</h5>
           <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
         </div>
       </div>
-      <div class="card bg-black border-white mb-2"" id="card3">
-        <img src="img/fotomanu1.jpg" class="card-img-top" alt="...">
+      <div class="card bg-black border-white mb-2" id="card3">
+        <img src="images/fotomanu1.jpg" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">Card title</h5>
           <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
@@ -127,28 +116,28 @@
       </ol>
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="img/fotomanu2.jpg" class="d-block w-100" alt="...">
+          <img src="images/fotomanu2.jpg" class="d-block w-100" alt="...">
           <div class="carousel-caption d-none d-md-block">
             <h5>First slide label</h5>
             <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
           </div>
         </div>
         <div class="carousel-item">
-          <img src="img\fotomanu3.jpg" class="d-block w-100" alt="esta">
+          <img src="images\fotomanu3.jpg" class="d-block w-100" alt="esta">
           <div class="carousel-caption d-none d-md-block">
             <h5>Second slide label</h5>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
           </div>
         </div>
         <div class="carousel-item">
-          <img src="img/fotomanu4.jpg" class="d-block w-100" alt="otra">
+          <img src="images/fotomanu4.jpg" class="d-block w-100" alt="otra">
           <div class="carousel-caption d-none d-md-block">
             <h5>Third slide label</h5>
             <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
           </div>
         </div>
         <div class="carousel-item">
-          <img src="img/fotomanu5.jpg" class="d-block w-100" alt="otra">
+          <img src="images/fotomanu5.jpg" class="d-block w-100" alt="otra">
           <div class="carousel-caption d-none d-md-block">
             <h5>Third slide label</h5>
             <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
@@ -165,28 +154,36 @@
       </a>
     </div>
    </div>
-
-
-
   <div class="section4">
-    <div class="card mb-3 bg-black">
-      <div class="row no-gutters">
-        <div class="col-md-4">
-          <div class="col-md-4 offset-md2 border-white mb-2">
-              <div class="embed-responsive embed-responsive-16y9 ">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13135.528272102689!2d-58.42499527214954!3d-34.607143526179655!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccb854f4a1223%3A0xa5ba594c2cbe32e!2sKowloon!5e0!3m2!1ses-419!2sar!4v1654271200860!5m2!1ses-419!2sar"  allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-              </div>
-          </div>
-        </div>
-        <div class="col-md-6">
-          <div class="card-body">
-            <h5 class="card-title">Visitanos!</h5>
-            <p class="card-text">Podes encontrarnos en Lavalle 3633 CABA. de Martes a domingos a partir de las 18 hs</p>
-          </div>
-        </div>
+      <div class="card-body">
+        <h5 class="card-title">Visitanos!</h5>
+         <p class="card-text">Podes encontrarnos en Lavalle 3633 CABA.<br> de Martes a domingos a partir de las 18 hs</p> 
+         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13135.528272102689!2d-58.42499527214954!3d-34.607143526179655!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccb854f4a1223%3A0xa5ba594c2cbe32e!2sKowloon!5e0!3m2!1ses-419!2sar!4v1654271200860!5m2!1ses-419!2sar"  allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
       </div>
-    </div>
-
+      <div class="card-body">
+         <h5 class="card-title">Contactanos!</h5>
+         <p class="card-text">Ponete en contacto para darnos tu opiñon<br>o si nos queres proponer algo </p> 
+      <form action="/" method="post" class="formulario">
+        <p>
+        <label for="nombre">Nombre</label>
+        <input type="text" name="nombre">
+        </p>
+        <p>
+        <label for="email">Email</label>
+        <input type="text" name="email">
+        </p>
+        <p>
+        <label for="tel">Telefono</label>  
+        <input type="text" name="tel">
+        </p>
+        <p>
+        <label for="mensaje">Mensaje</label>
+        <input type="text" name="mensaje">
+        </p>
+        <p><input type="submit" value="Enviar"></p>
+      </form>
+     </div>
+  </div>
 
    </div>
   </main>
@@ -194,23 +191,15 @@
     <div class="container">
       <div class="row">
         <div class="col"><h6>Navegacion</h6><br>
-          
+          <a href="/">Inicio</a><br>
+          <a href="/menu">Menu</a><br>
+          <a href="/agenda">Agenda</a><br>
+          <a href="/nosotros">Nosotros</a><br>
         </div>
-        <div class="col">col</div>
         <div class="col"><h6>Redes</h6><br>
-          <a href="https://www.instagram.com/francisco.cetta/"><img src="img\instagramnegro.png">Instagram</a><br>
-          <a href="mailto:fcettus@gmail.com"> <img src="img\cartanegra.png">fcettus@gmail.com</a></a>
-          
+          <a href="https://www.instagram.com/francisco.cetta/">Instagram</a><br>
+          <a href="mailto:fcettus@gmail.com">fcettus@gmail.com</a>
         </div>
-        <div class="w-100"></div>
-        <div class="col">Cop</div>
-
       </div>
     </div>
-    </div>
   </footer>
-      <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-      <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-      <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
-</body>
-</html>
